fixed overlapping in better way

--- a/tedx-website/src/components/about_tedx/about_tedx.css
+++ b/tedx-website/src/components/about_tedx/about_tedx.css
@@ -30,3 +30,6 @@
 .tedXRow{
     margin-bottom: 150px;
 }
+
+.tedXUofWInfo .row{
+}
